--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-MONGODB_URI = mongodb+srv://vinaysolaskar1:iamVinay2004@chat-app.3gl6q.mongodb.net/?retryWrites=true&w=majority&appName=Chat-app
+MONGODB_URI = mongodb+srv://vinaysolaskar1:me5bLB8sMg5kFvCE@chat-app.3gl6q.mongodb.net/?retryWrites=true&w=majority&appName=Chat-app
