--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.4",
     "nodemon": "^3.1.4",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "uuid": "^10.0.0"
   }
 }
